--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@nestjs/microservices": "^10.4.15",
     "dotenv": "^16.4.7"
   },
-  "private": true,
+  "private": false,
   "devDependencies": {
     "@types/node": "^22.10.2",
     "ts-loader": "^9.5.1",
