--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nest-rabbitmq",
+  "name": "tailt-rabbitmq",
   "version": "1.0.5",
-  "description": "A custom NestJs RabbitMQ library with pattern",
+  "description": "Rabbitmq component for NestJs.",
   "main": "dist/index.js",
   "scripts": {
     "build": "nest build",
