--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailt-rabbitmq",
+  "name": "@hirodev/nestjs-rabbitmq",
   "version": "1.0.6",
   "description": "Rabbitmq component for NestJs.",
   "main": "dist/index.js",
