--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,32 @@
 name: Publish
+
 on:
   push:
     tags:
-      - '*'
+      - '*' # Trigger on all tags
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      # Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Set up Node.js environment
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
-      - run: npm install
-      - run: npm publish
+
+      # Install dependencies
+      - name: Install dependencies
+        run: npm install
+
+      # Publish the scoped package
+      - name: Publish package
+        run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
