--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@tailt9/nestjs-rabbitmq",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Rabbitmq component for NestJs.",
   "main": "dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "nest build",
     "prepublishOnly": "npm run build"
