--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,33 @@
-name: Publish
+name: "NestJs RabbitMQ"
 
 on:
   push:
+    branches:
+      - master
     tags:
-      - '*' # Trigger on all tags
+      - 'v*' # Trigger on all tags
 
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      # Set up Node.js environment
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
 
-      # Install dependencies
       - name: Install dependencies
         run: npm install
 
-      # Publish the scoped package
-      - name: Publish package
-        run: npm publish --access public
+      - name: Build the project
+        run: npm run build  # Adjust this if you have a different build script
+
+      - name: Publish to npm
+        run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}  # Use your npm token stored in GitHub Secrets
