--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@nestjs/microservices": "^10.4.15",
     "dotenv": "^16.4.7"
   },
-  "private": false,
   "devDependencies": {
+    "@nestjs/cli": "^10.4.9",
     "@types/node": "^22.10.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.7.2",
